# Avos-Ai_Av

./: .gitignore  FIX_ENVIRONMENT.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UI_CONNECTION_DEBUG.md  package-lock.json  requirements.txt  run_avos.ps1
core/: __init__.py
core/ai/: __init__.py  chatbot.py  deepfake_scanner.py  model_trainer.py  threat_predictor.py  update_engine.py
core/api/: __init__.py  http_server.py
core/behavioral/: __init__.py  heuristic_engine.py
core/cso/: __init__.py  orchestrator.py
core/db/: __init__.py  db_manager.py
core/edr/: __init__.py  dark_web_monitor.py  forensic_trail.py
core/ids_ips/: __init__.py  ids_engine.py
core/ipc/: __init__.py  grpc_server.py  pipe_server.py
core/memory/: __init__.py  memory_guard.py
core/payment/: __init__.py  payment_shield.py
core/ransomware/: __init__.py  ransomware_shield.py
core/rootkit/: __init__.py  rootkit_detector.py
core/sandbox/: __init__.py  sandbox_runner.py
core/scanner/: __init__.py  autorun_guard.py  downloads_monitor.py  signature_engine.py  usb_monitor.py
core/utilities/: __init__.py  utilities.py
core/web_security/: __init__.py  waf.py
drivers/minifilter/: minifilter_driver.cpp
drivers/payment_hook/: payment_hook.cpp
drivers/wfp/: wfp_driver.cpp
logs/: .gitkeep  README.md
models/: .gitkeep  README.md
parsers/: Cargo.toml
parsers/src/: pe_parser.rs
quarantine/: .gitkeep
shared/: __init__.py
shared/config/: avos_config.yaml
signatures/: README.md
tests/: test_avos.py  test_payment_shield.py
ui/: package-lock.json  package.json
(+10 files in other folders)
